# askdb

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
scripts/: test_llm_sqlgen.py
src/: __init__.py
src/cli/: commands.py  entry.py  main.py  semantic_tui.py  session_state.py
src/config/: __init__.py  database.py  vanna_config.py
src/db/: __init__.py  base.py  factory.py  mysql_adapter.py  postgres_adapter.py  sqlite_adapter.py  types.py
src/query/: __init__.py
src/semantic/: __init__.py  knowledge_graph.example.json  semantic_store.example.json  store.py
src/training/: schema_extractor.py  training_state.py
